# cpp_semi

./: .gitignore  README.md  p  start.sh
01/: 2  2.2.cpp  2.3.cpp  2.4.cpp  2.cpp  hello.cpp
07.10.23_semi/: CMakeLists.txt  main.cpp  vec2d.cpp  vec2d.h
16.09.23_semi/: BS_s171_n19.cpp  BS_s171_n20.cpp
homework/: 01_det.cpp  black_white_strip.cpp  calculator.cpp  nim.cpp
homework/calc7chapter/: CMakeLists.txt  calc_bugg08_2.cpp  calculate.cpp  calculate.h  grammar.cpp  grammar.h  token_tokenstream.cpp  token_tokenstream.h  variable.cpp  variable.h
homework/tests_calculator/: calculator.cpp  calculator02buggy.cpp  cintest.cpp
homework/zeros_w_cmake/: CMakeLists.txt  start_cmake.sh  zeros.cpp
homework/zeros_w_cmake/tests/: test1  tests.sh
labs/01/: main.cpp
labs/03/: erotosthen.cpp  integral.cpp  pow.cpp  root_search.cpp
labs/04/: bulls_and_cows.cpp
labs/06/: 111.cpp  randtemp.h  temp.txt
labs/linear_regr/: linear_reg.cpp
logic_sch/: lgic_element.h  logic_element.cpp
